--- a/.gitmodules
+++ b/.gitmodules
@@ -361,3 +361,123 @@
 [submodule "Module_1/Project/dsc-1-final-project-online-ds-pt-100118"]
 	path = Module_1/Project/dsc-1-final-project-online-ds-pt-100118
 	url = https://github.com/Socjon/dsc-1-final-project-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-03-problems-ds-can-solve-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-03-problems-ds-can-solve-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-03-problems-ds-can-solve-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-08-your-first-data-science-codealong-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-08-your-first-data-science-codealong-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-08-your-first-data-science-codealong-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-09-variable-assignment-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-09-variable-assignment-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-09-variable-assignment-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-10-strings-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-10-strings-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-10-strings-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-11-strings-lab-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-11-strings-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-11-strings-lab-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-14-variable-assignment-lab-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-14-variable-assignment-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-14-variable-assignment-lab-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-15-control-flow-conditionals-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-15-control-flow-conditionals-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-15-control-flow-conditionals-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-19-looping-over-collections-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-19-looping-over-collections-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-19-looping-over-collections-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-22-working-with-dictionaries-lab-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-22-working-with-dictionaries-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-22-working-with-dictionaries-lab-online-ds-pt-100118
+[submodule "Module_1/01-getting-started-with-data-science/dsc-1-01-23-visualizing-data-online-ds-pt-100118"]
+	path = Module_1/01-getting-started-with-data-science/dsc-1-01-23-visualizing-data-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-01-23-visualizing-data-online-ds-pt-100118
+[submodule "Module_1/02-importing-and-statistical-analysis-of-data/dsc-1-02-02-introduction-summary-online-ds-pt-100118"]
+	path = Module_1/02-importing-and-statistical-analysis-of-data/dsc-1-02-02-introduction-summary-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-02-02-introduction-summary-online-ds-pt-100118
+[submodule "Module_1/02-importing-and-statistical-analysis-of-data/dsc-1-02-21-section-recap-summary-online-ds-pt-100118"]
+	path = Module_1/02-importing-and-statistical-analysis-of-data/dsc-1-02-21-section-recap-summary-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-02-21-section-recap-summary-online-ds-pt-100118
+[submodule "Module_1/03-working-with-pandas/dsc-1-03-02-introduction-summary-online-ds-pt-100118"]
+	path = Module_1/03-working-with-pandas/dsc-1-03-02-introduction-summary-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-03-02-introduction-summary-online-ds-pt-100118
+[submodule "Module_1/03-working-with-pandas/dsc-1-03-04-importing-data-using-pandas-online-ds-pt-100118"]
+	path = Module_1/03-working-with-pandas/dsc-1-03-04-importing-data-using-pandas-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-03-04-importing-data-using-pandas-online-ds-pt-100118
+[submodule "Module_1/03-working-with-pandas/dsc-1-03-05-importing-data-using-pandas-lab-online-ds-pt-100118"]
+	path = Module_1/03-working-with-pandas/dsc-1-03-05-importing-data-using-pandas-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-03-05-importing-data-using-pandas-lab-online-ds-pt-100118
+[submodule "Module_1/03-working-with-pandas/dsc-1-03-10-statistical-methods-in-pandas-online-ds-pt-100118"]
+	path = Module_1/03-working-with-pandas/dsc-1-03-10-statistical-methods-in-pandas-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-03-10-statistical-methods-in-pandas-online-ds-pt-100118
+[submodule "Module_1/03-working-with-pandas/dsc-1-03-11-statistical-methods-in-pandas-lab-online-ds-pt-100118"]
+	path = Module_1/03-working-with-pandas/dsc-1-03-11-statistical-methods-in-pandas-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-03-11-statistical-methods-in-pandas-lab-online-ds-pt-100118
+[submodule "Module_1/03-working-with-pandas/dsc-1-03-12-customizing-visualizations-with-matplotlib-online-ds-pt-100118"]
+	path = Module_1/03-working-with-pandas/dsc-1-03-12-customizing-visualizations-with-matplotlib-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-03-12-customizing-visualizations-with-matplotlib-online-ds-pt-100118
+[submodule "Module_1/03-working-with-pandas/dsc-1-03-19-section-recap-summary-online-ds-pt-100118"]
+	path = Module_1/03-working-with-pandas/dsc-1-03-19-section-recap-summary-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-03-19-section-recap-summary-online-ds-pt-100118
+[submodule "Module_1/04-data-cleaning-in-pandas/dsc-1-04-02-introduction-summary-online-ds-pt-100118"]
+	path = Module_1/04-data-cleaning-in-pandas/dsc-1-04-02-introduction-summary-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-04-02-introduction-summary-online-ds-pt-100118
+[submodule "Module_1/04-data-cleaning-in-pandas/dsc-1-04-06-combining-dataframes-with-pandas-online-ds-pt-100118"]
+	path = Module_1/04-data-cleaning-in-pandas/dsc-1-04-06-combining-dataframes-with-pandas-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-04-06-combining-dataframes-with-pandas-online-ds-pt-100118
+[submodule "Module_1/04-data-cleaning-in-pandas/dsc-1-04-11-dealing-with-missing-data-quiz-online-ds-pt-100118"]
+	path = Module_1/04-data-cleaning-in-pandas/dsc-1-04-11-dealing-with-missing-data-quiz-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-04-11-dealing-with-missing-data-quiz-online-ds-pt-100118
+[submodule "Module_1/05-sql-and-relational-databases/dsc-1-05-02-introduction-summary-online-ds-pt-100118"]
+	path = Module_1/05-sql-and-relational-databases/dsc-1-05-02-introduction-summary-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-05-02-introduction-summary-online-ds-pt-100118
+[submodule "Module_1/05-sql-and-relational-databases/dsc-1-05-11-join-statements-lab-online-ds-pt-100118"]
+	path = Module_1/05-sql-and-relational-databases/dsc-1-05-11-join-statements-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-05-11-join-statements-lab-online-ds-pt-100118
+[submodule "Module_1/05-sql-and-relational-databases/dsc-1-05-14-grouping-data-with-sql-online-ds-pt-100118"]
+	path = Module_1/05-sql-and-relational-databases/dsc-1-05-14-grouping-data-with-sql-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-05-14-grouping-data-with-sql-online-ds-pt-100118
+[submodule "Module_1/05-sql-and-relational-databases/dsc-1-05-17-using-sql-with-pandas-lab-online-ds-pt-100118"]
+	path = Module_1/05-sql-and-relational-databases/dsc-1-05-17-using-sql-with-pandas-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-05-17-using-sql-with-pandas-lab-online-ds-pt-100118
+[submodule "Module_1/06-object-oriented-programming/dsc-1-06-02-introduction-summary-online-ds-pt-100118"]
+	path = Module_1/06-object-oriented-programming/dsc-1-06-02-introduction-summary-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-06-02-introduction-summary-online-ds-pt-100118
+[submodule "Module_1/06-object-oriented-programming/dsc-1-06-03-introduction-to-object-orientation-online-ds-pt-100118"]
+	path = Module_1/06-object-oriented-programming/dsc-1-06-03-introduction-to-object-orientation-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-06-03-introduction-to-object-orientation-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-03-statistical-distributions-and-their-use-cases-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-03-statistical-distributions-and-their-use-cases-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-03-statistical-distributions-and-their-use-cases-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-04-statistical-distributions-with-stem-and-leaf-plots-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-04-statistical-distributions-with-stem-and-leaf-plots-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-04-statistical-distributions-with-stem-and-leaf-plots-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-05-statistical-distributions-with-stem-and-leaf-plots-labs-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-05-statistical-distributions-with-stem-and-leaf-plots-labs-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-05-statistical-distributions-with-stem-and-leaf-plots-labs-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-07-the-probability-mass-function-lab-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-07-the-probability-mass-function-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-07-the-probability-mass-function-lab-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-08-the-cumulative-distribution-function-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-08-the-cumulative-distribution-function-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-08-the-cumulative-distribution-function-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-10-the-probability-density-function-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-10-the-probability-density-function-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-10-the-probability-density-function-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-11-the-probability-density-function-lab-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-11-the-probability-density-function-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-11-the-probability-density-function-lab-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-13-normal-gaussian-distributions-lab-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-13-normal-gaussian-distributions-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-13-normal-gaussian-distributions-lab-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-15-standard-normal-distribution-lab-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-15-standard-normal-distribution-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-15-standard-normal-distribution-lab-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-16-skewness-and-kurtosis-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-16-skewness-and-kurtosis-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-16-skewness-and-kurtosis-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-19-one-sample-z-test-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-19-one-sample-z-test-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-19-one-sample-z-test-online-ds-pt-100118
+[submodule "Module_1/09-statistical-distributions/dsc-1-09-20-one-sample-z-test-lab-online-ds-pt-100118"]
+	path = Module_1/09-statistical-distributions/dsc-1-09-20-one-sample-z-test-lab-online-ds-pt-100118
+	url = https://github.com/Socjon/dsc-1-09-20-one-sample-z-test-lab-online-ds-pt-100118
